--- a/code/css/css2/taller_01/index.html
+++ b/code/css/css2/taller_01/index.html
@@ -17,7 +17,7 @@
             <h2>Taller para estructurar y diseñar una página web</h2>
         </main>
         <footer>
-            Copyright &copy; 2021 Guillermo Pizarro.
+            Copyright &copy; 2021 Sofia Andrade
         </footer>
     </body>
 </html>
