--- a/code/css/css2/taller_01/servicios.html
+++ b/code/css/css2/taller_01/servicios.html
@@ -23,7 +23,7 @@
             </dl>
         </main>
         <footer>
-            Copyright &copy; 2021 Guillermo Pizarro.
+            Copyright &copy; 2021 Sofia Andrade.
         </footer>
     </body>
 </html>
