--- a/code/javascript-basic/taller_08/index.html
+++ b/code/javascript-basic/taller_08/index.html
@@ -34,7 +34,7 @@
             </form>
         </div>
         <div class="item footer centro">
-            Guillermo Pizarro. &copy; 2021.
+            Sofia Andrade. &copy; 2021.
         </div>
     </section>
 </body>
